--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,34 @@
 /* style common */
+@import url("https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800&display=swap");
+
 body,
 #root {
   width: 100%;
   height: 100%;
+  max-width: 430px;
+  margin: auto;
+  padding: 0px;
+  overflow: hidden;
+  background-color: #fff;
+  font-family: "Kanit", sans-serif;
+
+  .back-to-page {
+    display: flex;
+    text-align: center;
+    width: 100%;
+    align-items: center;
+    padding: 0.8rem;
+    cursor: pointer;
+
+    svg {
+      font-size: 2rem;
+    }
+
+    .title {
+      width: 100%;
+      text-align: center;
+      margin: 0;
+      font-size: 1.3rem;
+    }
+  }
 }
